2010-05-21  Sam Steingold  <sds@gnu.org>

	* modules/pari/Makefile.in (pari.o): pass -I. first thing to CC
	so that pari/config.h was included instead of the clisp config.h

2010-05-18  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp: sync with libpq-fe.h 1.147 (8.4)
	(PG_COPYRES_ATTRS,PG_COPYRES_TUPLES, PG_COPYRES_EVENTS)
	(PG_COPYRES_NOTICEHOOKS, PGresAttDesc, PQconninfoParse, PQinitOpenSSL)
	(PQcopyResult, PQsetResultAttrs, PQresultAlloc, PQsetvalue)
	(lo_import_with_oid): add
	* modules/postgresql/configure.in: check for the new functions

2010-05-18  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c: support 4.8
	(DB_XIDDATASIZE): when undefined, use DB_GID_SIZE
	(BDB:DB-CREATE): do not accept :XA
	(BDB:DBC-DEL): accept :CONSUME
	(BDB:DBC-PUT): accept :OVERWRITE-DUP
	* modules/berkeley-db/configure.in:
	check for the new field names in DB_TXN_ACTIVE
	* modules/berkeley-db/dbi.lisp (db-txn-active): rename fields:
	`xid' to `gid' and `xa_status' to `status'
	use :DB-GID-SIZE instead of :DB-XIDDATASIZE

2010-05-18  Sam Steingold  <sds@gnu.org>

	* modules/pari/Makefile.in (ALL_CFLAGS): collect all CFLAGS et al
	variables here and add -I$(srcddir) for cpari.h
	(pari.o, cpari.o): use it instead of listing all variables explicitly

2010-05-18  Sam Steingold  <sds@gnu.org>

	update gnulib
	* build-aux/arg-nonnull.h, build-aux/c++defs.h, build-aux/warn-on-use.h:
	* gllib/langinfo.in.h, gllib/nl_langinfo.c, gllib/stddef.in.h:
	* glm4/fcntl-o.m4, glm4/langinfo_h.m4, glm4/nl_langinfo.m4:
	* glm4/stddef_h.m4, glm4/warn-on-use.m4, glm4/wchar_h.m4:
	* glm4/wctype_h.m4: add
	* modules/regexp/gllib/Makefile.am, modules/regexp/gllib/btowc.c:
	* modules/regexp/gllib/gettext.h, modules/regexp/gllib/regcomp.c:
	* modules/regexp/gllib/stdlib.in.h, modules/regexp/gllib/unistd.in.h:
	* modules/regexp/glm4/btowc.m4, modules/regexp/glm4/gnulib-common.m4:
	* modules/regexp/glm4/gnulib-comp.m4, modules/regexp/glm4/mbrtowc.m4: